# LiquidityLens

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  JUDGE_PERSPECTIVE.md  README.md  SUMMARY.md  TASK.md  audit.md  docker-compose.yml  hackathon_details.tex  judge.md  sonar-project.properties
backend/: .fastapicloudignore  DEPLOY.md  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/ai/: explainer.py  fallback.py  prompts.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260711_0001_initial_domain_schema.py  a66b11eaa5e7_initial_schema.py
backend/api/: agents.py  alerts.py  analytics.py  cases.py  simulator.py  ws.py
backend/app/: __init__.py  main.py
backend/app/alerts/: __init__.py  exceptions.py  repository.py  schemas.py  service.py
backend/app/anomaly/: __init__.py  detector.py  evidence.py  exceptions.py  repository.py  schemas.py  service.py
backend/app/api/: __init__.py  schemas.py
backend/app/audit/: __init__.py
backend/app/auth/: __init__.py  scope.py
backend/app/cases/: __init__.py  exceptions.py  repository.py  schemas.py  service.py
backend/app/confidence/: __init__.py  engine.py  repository.py  schemas.py  (+1 more)
backend/core/: config.py  database.py
backend/data/: seed.py  synthetic.py
backend/engines/: coordinator.py  liquidity.py
backend/models/: __init__.py  agent.py  alert.py  balance.py  baseline.py  case.py  transaction.py
backend/providers/: base.py  bkash.py  nagad.py  rocket.py
backend/scheduler/: poller.py
(+209 files in other folders)
